# Minigames2

./: CMakeLists.txt  main.cpp  main.h
controllers/: game_controller.cpp  game_controller.h  main_controller.cpp  main_controller.h  main_controller_events.cpp  menu_controller.cpp  menu_controller.h  user_controller.cpp  user_controller.h
database/: data_conversion.cpp  database_helper_functions.cpp  database_manager.cpp  database_manager.h
database/tables/: highscores.json  users.json
dataclasses/: data_header.h  dataclasses.h  leaderboard_data.h  session_data.h  user_data.h
events/: event_stream.cpp  event_stream.h  warning.cpp  warning.h
games/: game.cpp  game.h  games_list.h  vectors.h
games/match_pairs/: load.cpp  match_pairs.cpp  match_pairs.h  tile.cpp  tile.h
games/simon_says/: simon_says.cpp  simon_says.h  tile_management.cpp
games/snake/: snake.cpp  snake.h
games/snake/helper/: entity.cpp  entity.h  state.h
games/snake/skins/: skin.cpp  skin.h  skin_manager.cpp  skin_manager.h
games/snake/skins/base/: base.cpp  base.h
games/snake/skins/classic/: classic.cpp  classic.h
games/snake/skins/matrix/: matrix.cpp  matrix.h
games/tic_tac_toe/: load.cpp  tic_tac_toe.cpp  tic_tac_toe.h  tile.cpp  tile.h
menu/: login_menu.cpp  login_menu.h  main_menu.cpp  main_menu.h  menu.cpp  menu.h  notification_menu.cpp  notification_menu.h  register_menu.cpp  register_menu.h
menu/submenu/: submenus_header.h
menu/submenu/feats_submenu/: feats_submenu.cpp  feats_submenu.h
menu/submenu/main_submenu/: main_submenu.cpp  main_submenu.h  submenu_loads.cpp
menu/submenu/user_submenu/: submenu_loads.cpp  user_submenu.cpp  user_submenu.h
